<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="beeManagementViewModel"
            type="com.example.android.myapplication.selectmanagement.BeeManagementViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/manage_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/Option_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@id/close_linear_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/manage_qeenbee"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:onClick="@{() -> beeManagementViewModel.clickOnQueenBeeManagementButton()}"
                            android:text="@string/queenbee_management_button"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/broodframe_balance"
                            app:layout_constraintBottom_toTopOf="@id/honeyframe_balance"/>

                        <Button
                            android:id="@+id/broodframe_balance"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:onClick="@{() -> beeManagementViewModel.clickOnBroodFrameBalancingButton()}"
                            android:text="@string/broodframe_balance_button"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toEndOf="@id/manage_qeenbee"
                            app:layout_constraintBottom_toTopOf="@id/swarming_bees"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <Button
                            android:id="@+id/honeyframe_balance"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:text="@string/honeyframe_balance_button"
                            android:onClick="@{() -> beeManagementViewModel.clickOnHoneyFrameBalancingButton()}"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/manage_qeenbee"
                            app:layout_constraintEnd_toStartOf="@id/swarming_bees"
                            app:layout_constraintBottom_toTopOf="@id/sick_beehives"/>

                        <Button
                            android:id="@+id/swarming_bees"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:text="@string/swarming_bees_button"
                            android:onClick="@{()-> beeManagementViewModel.clickOnSwarmingBeesButton()}"
                            app:layout_constraintTop_toBottomOf="@id/broodframe_balance"
                            app:layout_constraintStart_toEndOf="@id/honeyframe_balance"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toTopOf="@id/statistics"/>


                        <Button
                            android:id="@+id/sick_beehives"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:text="@string/sick_beehives_button"
                            android:onClick="@{() -> beeManagementViewModel.clickOnSickBeesButton()}"
                            app:layout_constraintTop_toBottomOf="@id/honeyframe_balance"
                            app:layout_constraintStart_toStartOf="@id/honeyframe_balance"
                            app:layout_constraintEnd_toEndOf="@id/honeyframe_balance"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                        <Button
                            android:id="@+id/statistics"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:text="@string/statistics_button"
                            android:onClick="@{()-> beeManagementViewModel.clickOnStatisticsButton()}"
                            app:layout_constraintTop_toBottomOf="@id/swarming_bees"
                            app:layout_constraintStart_toStartOf="@id/swarming_bees"
                            app:layout_constraintEnd_toEndOf="@id/swarming_bees"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/close_linear_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="80dp"
                    android:paddingBottom="60dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Option_linear_layout"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <Button
                        android:id="@+id/close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> beeManagementViewModel.clickOnCloseButton()}"
                        android:text="@string/close_button"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>