<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="beeStatisticsViewModel"
            type="com.example.android.myapplication.beestatistics.BeeStatisticsViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_end">
            <androidx.cardview.widget.CardView
                android:id="@+id/population"
                android:layout_width="200dp"
                android:layout_height="320dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="5dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                android:layout_marginTop="0dp"
                android:layout_weight="2"
                android:layout_marginBottom="1dp"
                app:layout_constraintBottom_toTopOf="@id/queenbee_age"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_piechart_title"
                    android:textStyle="bold" android:textAlignment="center" android:layout_marginTop="2dp"/>
                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/ourPieChart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/queenbee_age"
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="5dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:layout_marginBottom="1dp"
                app:layout_constraintTop_toBottomOf="@id/population"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/queen_info">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_barchart_title"
                    android:textStyle="bold" android:textAlignment="center" android:layout_marginTop="2dp"/>
                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/ourBarChart"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </androidx.cardview.widget.CardView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/all_hive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/queenbee_age"
            app:layout_constraintBottom_toTopOf="@id/queen_info">
            <TextView
                android:id="@+id/all_hive_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_hive_total_text"
                android:textSize="@dimen/list_item_text_size"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin_start"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/sum_hive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_item_text_size"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/margin_end"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/queen_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/all_hive"
            app:layout_constraintBottom_toTopOf="@id/sicks_beehives">
        <TextView
            android:id="@+id/required_qeenbee_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat_bad_queenbee_text"
            android:textSize="@dimen/list_item_text_size"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/margin_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/required_queenbee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_item_text_size"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/margin_end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sicks_beehives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/queen_info"
            app:layout_constraintBottom_toTopOf="@id/swarming_beehives">
            <TextView
                android:id="@+id/sicks_beehive_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_sicks_beehives_text"
                android:textSize="@dimen/list_item_text_size"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin_start"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/sicks_beehive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_item_text_size"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/margin_end"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/swarming_beehives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sicks_beehives"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/swarming_beehive_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_swarming_beehives_text"
                android:textSize="@dimen/list_item_text_size"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin_start"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/swarming_beehive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_item_text_size"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/margin_end"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>